--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "lucide-react": "^0.487.0",
     "monaco-editor": "^0.52.2",
     "openai": "^4.91.1",
+    "pnpm": "^10.25.0",
     "posthog-js": "^1.236.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
